force-app/main/default/objects/PublicSector__EmergencyRequest__c/PublicSector__EmergencyRequest__c.object-meta.xml
<CustomObject>
    <label>Emergency Request</label>
    <nameField>
        <displayFormat>ER-{0000000}</displayFormat>
        <label>Emergency Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emergency Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>