force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__Account__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Emergency Requests</relationshipLabel>
    <relationshipName>Emergency_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>