force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__Address__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Address</label>
    <referenceTo>Address</referenceTo>
    <relationshipLabel>Emergency Requests</relationshipLabel>
    <relationshipName>Emergency_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>