force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__BusinessApplication__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__BusinessApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Application</label>
    <referenceTo>BusinessLicenseApplication</referenceTo>
    <relationshipLabel>Emergency Requests</relationshipLabel>
    <relationshipName>Emergency_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>