force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__Contact_Address__c</fullName>
    <label>Contact Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>