force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__DateRequired__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__DateRequired__c</fullName>
    <label>Date Required</label>
    <type>Date</type>
</CustomField>