force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__DeliveryInstructions__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__DeliveryInstructions__c</fullName>
    <label>Delivery Instructions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>