force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__DeliverySafetyConcerns__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__DeliverySafetyConcerns__c</fullName>
    <label>Delivery Health or Safety Concerns</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>