force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__DisinfectantQuantity__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__DisinfectantQuantity__c</fullName>
    <label>Disinfectant Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>