force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__DropOffDate__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__DropOffDate__c</fullName>
    <label>Drop-Off Date</label>
    <type>DateTime</type>
</CustomField>