force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__Email__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__Email__c</fullName>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>