force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__GogglesQuantity__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__GogglesQuantity__c</fullName>
    <label>Safety or Protective Goggles Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>