force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__GownsQuantity__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__GownsQuantity__c</fullName>
    <label>Gowns Quantity(Surgical or Exam)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>