force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__HandSanitizerQuantity__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__HandSanitizerQuantity__c</fullName>
    <label>Hand Sanitizer Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>