force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__IndividualApplication__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__IndividualApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Application</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Emergency Requests</relationshipLabel>
    <relationshipName>Emergency_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>