force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__IsDropOffDonation__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__IsDropOffDonation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drop-Off Donation</label>
    <type>Checkbox</type>
</CustomField>