force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__OrganizationAddress__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__OrganizationAddress__c</fullName>
    <label>Organization Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>