force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__OrganizationName__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__OrganizationName__c</fullName>
    <label>Organization Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>