force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__OrganizationType__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__OrganizationType__c</fullName>
    <label>Organization Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acute Psychiatric Hospital (APH)</fullName>
            </value>
            <value>
                <fullName>Adult Day Health Care (ADHC)</fullName>
            </value>
            <value>
                <fullName>Ambulatory Surgical Center (ASC)</fullName>
            </value>
            <value>
                <fullName>Chemical Dependency Recovery Hospital (CDRH)</fullName>
            </value>
            <value>
                <fullName>Chronic Dialysis Clinic (CDC)</fullName>
            </value>
            <value>
                <fullName>Congregate Living Health Facility (CLHF)</fullName>
            </value>
            <value>
                <fullName>End Stage Renal Dialysis (CDC/ESRD)</fullName>
            </value>
            <value>
                <fullName>General Acute Care Hospital (GACH)</fullName>
            </value>
            <value>
                <fullName>Home Health Agency (HHA)</fullName>
            </value>
            <value>
                <fullName>Hospice Facility (HOFA)</fullName>
            </value>
            <value>
                <fullName>Intermediate Care Facility (ICF)</fullName>
            </value>
            <value>
                <fullName>Pediatric Day Health &amp; Respite Care Facility (PDHRC)</fullName>
            </value>
            <value>
                <fullName>Primary Care Clinic (PCC)</fullName>
            </value>
            <value>
                <fullName>Skilled Nursing Facility (SNF)</fullName>
            </value>
            <value>
                <fullName>Surgical Clinic (SURGC)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>