force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__Phone__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__Phone__c</fullName>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>