force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__PickUpDate__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__PickUpDate__c</fullName>
    <label>Pick-Up Date</label>
    <type>DateTime</type>
</CustomField>