force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__PrimaryContactName__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__PrimaryContactName__c</fullName>
    <label>Primary Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>