force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__PrimaryContactPhone__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__PrimaryContactPhone__c</fullName>
    <label>Primary Contact Phone</label>
    <type>Phone</type>
</CustomField>