force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__PrimaryContactTitle__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__PrimaryContactTitle__c</fullName>
    <label>Primary Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>