force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__RequestDetails__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__RequestDetails__c</fullName>
    <label>Request Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>