force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__RequestedLengthOfStay__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__RequestedLengthOfStay__c</fullName>
    <label>Requested Length Of Stay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>