force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__RequestedService__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__RequestedService__c</fullName>
    <label>Requested Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Food Delivery</fullName>
                <default>true</default>
                <label>Food Delivery</label>
            </value>
            <value>
                <fullName>Medicine / Medical Supplies Delivery</fullName>
            </value>
            <value>
                <fullName>Temporary Housing</fullName>
            </value>
            <value>
                <fullName>Well-Being Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>