force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__RequestedStartDateOfStay__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__RequestedStartDateOfStay__c</fullName>
    <label>Requested Start Date Of Stay</label>
    <type>Date</type>
</CustomField>