force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__RequestorName__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__RequestorName__c</fullName>
    <label>Requestor Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>