force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__RequestReason__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__RequestReason__c</fullName>
    <label>Request Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Isolated</fullName>
                <default>true</default>
                <label>Isolated</label>
            </value>
            <value>
                <fullName>Quarantined</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>Elderly</fullName>
            </value>
            <value>
                <fullName>Homeless</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>