force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__RespiratorN95MaskQuantity__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__RespiratorN95MaskQuantity__c</fullName>
    <label>Respirator Quantity (N95 Mask)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>