force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__SecondaryContactName__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__SecondaryContactName__c</fullName>
    <label>Secondary Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>