force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__SecondaryContactPhone__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__SecondaryContactPhone__c</fullName>
    <label>Secondary Contact Phone</label>
    <type>Phone</type>
</CustomField>