force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__SecondaryContactTitle__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__SecondaryContactTitle__c</fullName>
    <label>Secondary Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>