force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__Title__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__Title__c</fullName>
    <label>Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>