force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__VentilatorQuantity__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__VentilatorQuantity__c</fullName>
    <label>Ventilator Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>