force-app/main/default/objects/PublicSector__EmergencyRequest__c/fields/PublicSector__ViralSwabsQuantity__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__ViralSwabsQuantity__c</fullName>
    <label>Viral Swabs Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>