force-app/main/default/objects/PublicSector__EmergencyRequest__c/recordTypes/PublicSector__Emergency_Assistance_Request.recordType-meta.xml
<RecordType>
    <fullName>PublicSector__Emergency_Assistance_Request</fullName>
    <active>true</active>
    <label>Emergency Assistance Request</label>
</RecordType>