force-app/main/default/objects/PublicSector__EmergencyRequest__c/recordTypes/PublicSector__Emergency_Supplies_Donation.recordType-meta.xml
<RecordType>
    <fullName>PublicSector__Emergency_Supplies_Donation</fullName>
    <active>true</active>
    <label>Emergency Supplies Donation</label>
</RecordType>