force-app/main/default/objects/PublicSector__EmergencyRequest__c/recordTypes/PublicSector__Emergency_Supplies_Request.recordType-meta.xml
<RecordType>
    <fullName>PublicSector__Emergency_Supplies_Request</fullName>
    <active>true</active>
    <label>Emergency Supplies Request</label>
</RecordType>