force-app/main/default/objects/PublicSector__EmergencyRequest__c/listViews/PublicSector__All.listView-meta.xml
<ListView>
    <fullName>PublicSector__All</fullName>
    <columns>NAME</columns>
    <columns>PublicSector__DeliveryInstructions__c</columns>
    <columns>PublicSector__DeliverySafetyConcerns__c</columns>
    <columns>PublicSector__PrimaryContactName__c</columns>
    <columns>PublicSector__PrimaryContactTitle__c</columns>
    <columns>PublicSector__PrimaryContactPhone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>