force-app/main/default/objects/PublicSector__EmergencyRequest__c/listViews/PublicSector__All1.listView-meta.xml
<ListView>
    <fullName>PublicSector__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>